--- a/views/cursos.html
+++ b/views/cursos.html
@@ -33,13 +33,13 @@
 				<div class="container">
 					<ul class="justify-content-evenly text-decoration-none">
 						<li>
-							<a href="./views/cursos.html">Cursos</a>
+							<a href="/views/cursos.html">Cursos</a>
 						</li>
 						<li>
-							<a href="./views/productos.html">Productos </a>
+							<a href="/views/productos.html">Productos </a>
 						</li>
 						<li>
-							<a href="./views/nosotros.html">Nosotros</a>
+							<a href="/views/nosotros.html">Nosotros</a>
 						</li>
 						<li>
 							<a href="/views/contacto.html">Contacto</a>
