--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,6 +6,7 @@
 @import './components/footer';
 @import './components/contactos';
 @import './components/404';
+@import './components/productos';
 body {
 	background-color: whitesmoke;
 }
