--- a/views/contacto.html
+++ b/views/contacto.html
@@ -32,10 +32,10 @@
 							<a href="/views/cursos.html">Cursos</a>
 						</li>
 						<li>
-							<a href="./views/productos.html">Productos </a>
+							<a href="/views/productos.html">Productos </a>
 						</li>
 						<li>
-							<a href="./views/nosotros.html">Nosotros</a>
+							<a href="/views/nosotros.html">Nosotros</a>
 						</li>
 						<li>
 							<a href="/views/contacto.html">Contacto</a>
