--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -7,6 +7,7 @@
 @import './components/contactos';
 @import './components/404';
 @import './components/productos';
+@import './components/nosotros';
 body {
 	background-color: whitesmoke;
 }
