--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -20,10 +20,7 @@
 		<nav class="bgPrimary">
 			<div class="align-items-center">
 				<a href="/index.html" class="mx-auto"
-					><img
-						src="../assets/img/logo.png"
-						alt="logo"
-						class="nav__logo"
+					><img src="../assets/img/logo.png" alt="logo" class="nav__logo"
 				/></a>
 
 				<div class="container">
@@ -45,6 +42,107 @@
 			</div>
 		</nav>
 
+		<main>
+			<div class="container-fluid bgPrimary section__padding my-5">
+				<h1 class="text-white text-center nosotros__font">¿Quienes Somos?</h1>
+
+				<div class="row justify-content-center">
+					<div class="col-lg-10">
+						<div class="row">
+							<div class="col-lg-4 col-md-12 d-flex justify-content-center">
+								<img
+									src="/assets/img/directora.jpg "
+									alt="directora"
+									class="img-fluid"
+								/>
+							</div>
+
+							<div class="col-lg-7 col-md-12">
+								<img
+									src="https://via.placeholder.com/740x170"
+									alt="Nombre Directora"
+									class="img-fluid nosotros__name--directora"
+								/>
+								<p
+									class="
+										colorTertiary
+										section__border
+										bgTertiary
+										text-dark
+										fontSizeM
+										nosotros__info
+									"
+								>
+									Andrea es la directora y fundadora de Sinergia, a sus 43 años
+									conlleva una de las mejores academia del pais donde asisten mas
+									de 1000 alumnos por año, a participado en Grandes Eventos,
+									trabajado con los mejores profesionales y recorrido gran parte
+									del pais. Lleva mas de 20 años en el rubro de la Peluqueria, Su
+									aficion es la colorimetria y enseñar, Ademas de ser la directora
+									es la profesora de los superiores que son encargados de ya
+									capacitar a profesionales.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</main>
+
+		<section>
+			<h2 class="text-center nosotros__profesores">Profesores</h2>
+			<div class="row py-5 ms-5">
+				<div class="col-lg-2 col-md-4 col-sm-6 py-5">
+					<a href="https://www.instagram.com/brianpaez19/"
+						><img
+							src="/assets/img/chino.jpg"
+							alt="Img profesor"
+							class="rounded-circle w-75"
+					/></a>
+				</div>
+				<div class="col-lg-2 col-md-4 col-sm-6 py-5">
+					<a href="https://www.instagram.com/castro_agustina16/"
+						><img
+							src="/assets/img/carla.jpg"
+							alt="Img profesor"
+							class="rounded-circle w-75"
+					/></a>
+				</div>
+				<div class="col-lg-2 col-md-4 col-sm-6 py-5">
+					<a href="https://www.instagram.com/tiago_sinergia/"
+						><img
+							src="/assets/img/tiago.jpg"
+							alt="Img profesor"
+							class="rounded-circle w-75"
+					/></a>
+				</div>
+				<div class="col-lg-2 col-md-4 col-sm-6 py-5">
+					<a href="https://www.instagram.com/marthin_luxuria/"
+						><img
+							src="/assets/img/martin.jpg"
+							alt="Img profesor"
+							class="rounded-circle w-75"
+					/></a>
+				</div>
+				<div class="col-lg-2 col-md-4 col-sm-6 py-5">
+					<a href="https://www.instagram.com/abymendoza0211/"
+						><img
+							src="/assets/img/abigail.jpg"
+							alt="Img profesor"
+							class="rounded-circle w-75"
+					/></a>
+				</div>
+				<div class="col-lg-2 col-md-4 col-sm-6 py-5">
+					<a href="https://www.instagram.com"
+						><img
+							src="/assets/img/walter.jpg"
+							alt=" Img profesor"
+							class="rounded-circle w-75"
+					/></a>
+				</div>
+			</div>
+		</section>
+
 		<footer>
 			<div class="footer__secondary py-3">
 				<p class="footer__text"></p>
@@ -54,55 +152,21 @@
 				<div class="footerRedes">
 					<div class="socialNetworks d-flex justify-content-center">
 						<a href="https://www.facebook.com/"
-							><i
-								class="
-									fab
-									fa-facebook-square
-									iconoSocial
-									text-warning
-									mx-5
-								"
-							></i
+							><i class="fab fa-facebook-square iconoSocial text-warning mx-5"></i
 						></a>
 						<a href="https://twitter.com/"
-							><i
-								class="
-									fab
-									fa-twitter
-									mx-5
-									iconoSocial
-									text-warning
-								"
-							></i
+							><i class="fab fa-twitter mx-5 iconoSocial text-warning"></i
 						></a>
 						<a href="https://www.instagram.com/"
-							><i
-								class="
-									fab
-									fa-instagram
-									iconoSocial
-									text-warning
-									mx-5
-								"
-							></i
+							><i class="fab fa-instagram iconoSocial text-warning mx-5"></i
 						></a>
 						<a href="https://www.youtube.com/">
-							<i
-								class="
-									fab
-									fa-youtube
-									iconoSocial
-									text-warning
-									mx-5
-								"
-							></i>
+							<i class="fab fa-youtube iconoSocial text-warning mx-5"></i>
 						</a>
 					</div>
 					<div class="footer__contactanos">
 						<p class="footer__contactanos--text">Contactanos</p>
-						<p class="footer__contactanos--number">
-							011-222-333-111
-						</p>
+						<p class="footer__contactanos--number">011-222-333-111</p>
 					</div>
 				</div>
 			</div>
