--- a/views/productos.html
+++ b/views/productos.html
@@ -46,155 +46,174 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-lg-3 py-5">
-						<h2 class="fw-bold text-center py-3 fs-1">Filtrar Resultados</h2>
+						<div
+							class="
+								productos__checkbox
+								py-3
+								d-none d-xxl-block d-xl-block d-lg-block
+							"
+						>
+							<h2 class="fw-bold text-center py-3 fs-1">Filtrar Resultados</h2>
+							<h4 class="fw-bold fs-2">CATEGORIAS</h4>
+							<div class="border-bottom border-warning border-3 w-75 pt-1"></div>
+							<div class="d-flex flex-column">
+								<label
+									><input type="checkbox" />
+									Maquinas
+								</label>
 
-						<h4 class="fw-bold fs-2">CATEGORIAS</h4>
-						<div class="border-bottom border-warning border-3 w-75 pt-1"></div>
-						<div class="productos__checkbox py-3">
-							<label
-								><input type="checkbox" />
-								Maquinas
-							</label>
+								<label
+									><input type="checkbox" />
+									Patilleras
+								</label>
 
-							<label
-								><input type="checkbox" />
-								Patilleras
-							</label>
+								<label
+									><input type="checkbox" />
+									secadores
+								</label>
 
-							<label
-								><input type="checkbox" />
-								secadores
-							</label>
+								<label
+									><input type="checkbox" />
+									Planchitas
+								</label>
+								<label
+									><input type="checkbox" />
+									tijeras
+								</label>
+								<label
+									><input type="checkbox" />
+									peines
+								</label>
+								<label
+									><input type="checkbox" />
+									cepillos
+								</label>
+								<label
+									><input type="checkbox" />
+									navajas
+								</label>
+								<label
+									><input type="checkbox" />
+									tinturas
+								</label>
+								<label
+									><input type="checkbox" />
+									bandas
+								</label>
+								<label
+									><input type="checkbox" />
+									geles
+								</label>
+								<label
+									><input type="checkbox" />
+									ceras
+								</label>
+								<label
+									><input type="checkbox" />
+									oxidantes
+								</label>
+								<label
+									><input type="checkbox" />
+									Decolarante
+								</label>
+								<label
+									><input type="checkbox" />
+									Aluminio
+								</label>
+								<label
+									><input type="checkbox" />
+									bucleras
+								</label>
 
-							<label
-								><input type="checkbox" />
-								Planchitas
-							</label>
-							<label
-								><input type="checkbox" />
-								tijeras
-							</label>
-							<label
-								><input type="checkbox" />
-								peines
-							</label>
-							<label
-								><input type="checkbox" />
-								cepillos
-							</label>
-							<label
-								><input type="checkbox" />
-								navajas
-							</label>
-							<label
-								><input type="checkbox" />
-								tinturas
-							</label>
-							<label
-								><input type="checkbox" />
-								bandas
-							</label>
-							<label
-								><input type="checkbox" />
-								geles
-							</label>
-							<label
-								><input type="checkbox" />
-								ceras
-							</label>
-							<label
-								><input type="checkbox" />
-								oxidantes
-							</label>
-							<label
-								><input type="checkbox" />
-								Decolarante
-							</label>
-							<label
-								><input type="checkbox" />
-								Aluminio
-							</label>
-							<label
-								><input type="checkbox" />
-								bucleras
-							</label>
+								<h4 class="fw-bold pt-5 fs-2">Marca</h4>
+								<div class="border-bottom border-warning border-3 w-75 pt-2"></div>
 
-							<h4 class="fw-bold pt-5 fs-2">Marca</h4>
-							<div class="border-bottom border-warning border-3 w-75 pt-2"></div>
+								<label class="pt-2"
+									><input type="checkbox" />
+									wahl
+								</label>
 
-							<label class="pt-2"
-								><input type="checkbox" />
-								wahl
-							</label>
+								<label
+									><input type="checkbox" />
+									kemei
+								</label>
 
-							<label
-								><input type="checkbox" />
-								kemei
-							</label>
+								<label
+									><input type="checkbox" />
+									duga
+								</label>
 
-							<label
-								><input type="checkbox" />
-								duga
-							</label>
-
-							<label
-								><input type="checkbox" />
-								vanta
-							</label>
-							<label
-								><input type="checkbox" />
-								b-Way
-							</label>
-							<label
-								><input type="checkbox" />
-								babyliss
-							</label>
-							<label
-								><input type="checkbox" />
-								kieper
-							</label>
-							<label
-								><input type="checkbox" />
-								dayo
-							</label>
-							<label
-								><input type="checkbox" />
-								suzika
-							</label>
-							<label
-								><input type="checkbox" />
-								progemei
-							</label>
-							<label
-								><input type="checkbox" />
-								vs-sasson
-							</label>
-							<label
-								><input type="checkbox" />
-								mundial
-							</label>
-							<label
-								><input type="checkbox" />
-								EuroStyle
-							</label>
-							<label
-								><input type="checkbox" />
-								Dovo
-							</label>
-							<label
-								><input type="checkbox" />
-								Salon-in
-							</label>
-							<label
-								><input type="checkbox" />
-								Docta
-							</label>
+								<label
+									><input type="checkbox" />
+									vanta
+								</label>
+								<label
+									><input type="checkbox" />
+									b-Way
+								</label>
+								<label
+									><input type="checkbox" />
+									babyliss
+								</label>
+								<label
+									><input type="checkbox" />
+									kieper
+								</label>
+								<label
+									><input type="checkbox" />
+									dayo
+								</label>
+								<label
+									><input type="checkbox" />
+									suzika
+								</label>
+								<label
+									><input type="checkbox" />
+									progemei
+								</label>
+								<label
+									><input type="checkbox" />
+									vs-sasson
+								</label>
+								<label
+									><input type="checkbox" />
+									mundial
+								</label>
+								<label
+									><input type="checkbox" />
+									EuroStyle
+								</label>
+								<label
+									><input type="checkbox" />
+									Dovo
+								</label>
+								<label
+									><input type="checkbox" />
+									Salon-in
+								</label>
+								<label
+									><input type="checkbox" />
+									Docta
+								</label>
+							</div>
 						</div>
 
-						<div class="py-2">
-							<input type="text" class="w-50 producto__button--input p-3" />
+						<div
+							class="
+								d-flex
+								justify-content-center
+								d-none d-xxl-block d-xl-block d-lg-block
+							"
+						>
+							<div class="d-block">
+								<input type="text" class="w-50 producto__button--input p-3" />
+								<button
+									class="d-flex btn btn-warning fs-2 justify-content-center my-2"
+								>
+									Buscar
+								</button>
+							</div>
 						</div>
-						<button class="d-flex btn btn-warning w-50 fs-2">Buscar</button>
 					</div>
 
 					<div class="col-lg-8">
