--- a/views/contacto.html
+++ b/views/contacto.html
@@ -20,10 +20,7 @@
 		<nav class="bgPrimary">
 			<div class="align-items-center">
 				<a href="/index.html" class="mx-auto"
-					><img
-						src="../assets/img/logo.png"
-						alt="logo"
-						class="nav__logo"
+					><img src="../assets/img/logo.png" alt="logo" class="nav__logo"
 				/></a>
 
 				<div class="container">
@@ -49,37 +46,21 @@
 			<div>
 				<h1 class="text-center p-4 contacto__title">Contactanos</h1>
 				<div class="row">
-					<div
-						class="
-							col-lg-6
-							d-flex
-							justify-content-center
-							align-items-center
-							my-5
-						"
-					>
-						<img
-							class="w-50"
-							src="../assets/img/logo.png"
-							alt="logo"
-						/>
+					<div class="col-lg-6 d-flex justify-content-center align-items-center my-5">
+						<img class="w-50" src="../assets/img/logo.png" alt="logo" />
 					</div>
 					<div class="col-lg-5 my-5">
 						<div>
 							<form class="text-warning">
 								<fieldset>
-									<legend class="text-center fs-1">
-										Completa los datos
-									</legend>
+									<legend class="text-center fs-1">Completa los datos</legend>
 
-									<label class="fs-2 pb-2" for="nombre"
-										>Nombre Completo</label
-									>
+									<label class="fs-2 pb-2" for="nombre">Nombre Completo</label>
 									<input
 										type="text"
 										name="nombre"
 										id=""
-										class="form-control fs-3"
+										class="form-control fs-3 opacity-50"
 									/>
 
 									<label class="fs-2 pb-2" for="telefono"
@@ -89,20 +70,15 @@
 										type="number"
 										name="telefono"
 										id=""
-										class="p-2 fs-3 form-control"
+										class="p-2 fs-3 form-control opacity-50 text-white"
 									/>
 
 									<label class="fs-2 pb-2" for="seleccionar"
 										>Sobre que quiere saber</label
 									>
-									<select
-										class="p-2 fs-3 form-control"
-										name="select"
-									>
+									<select class="p-2 fs-3 form-control opacity-50" name="select">
 										<option value="value1">Cursos</option>
-										<option value="value2" selected>
-											Productos
-										</option>
+										<option value="value2" selected>Productos</option>
 										<option value="value3">Otros</option>
 									</select>
 
@@ -111,7 +87,7 @@
 									>
 
 									<textarea
-										class="fs-2 p-1 form-control bg-light"
+										class="fs-2 p-1 form-control bg-light opacity-50 fw-bold"
 										name="textarea"
 										id=""
 										cols="30"
@@ -121,19 +97,9 @@
 									<div class="d-flex">
 										<input
 											type="submit"
-											class="
-												w-50
-												p-3
-												mt-5
-												bg-warning
-												fs-2
-												me-3
-											"
+											class="w-50 p-3 mt-5 bg-warning fs-2 me-3"
 										/>
-										<input
-											type="reset"
-											class="w-50 p-3 mt-5 bg-white fs-2"
-										/>
+										<input type="reset" class="w-50 p-3 mt-5 bg-white fs-2" />
 									</div>
 								</fieldset>
 							</form>
@@ -152,55 +118,21 @@
 				<div class="footerRedes">
 					<div class="socialNetworks d-flex justify-content-center">
 						<a href="https://www.facebook.com/"
-							><i
-								class="
-									fab
-									fa-facebook-square
-									iconoSocial
-									text-warning
-									mx-5
-								"
-							></i
+							><i class="fab fa-facebook-square iconoSocial text-warning mx-5"></i
 						></a>
 						<a href="https://twitter.com/"
-							><i
-								class="
-									fab
-									fa-twitter
-									mx-5
-									iconoSocial
-									text-warning
-								"
-							></i
+							><i class="fab fa-twitter mx-5 iconoSocial text-warning"></i
 						></a>
 						<a href="https://www.instagram.com/"
-							><i
-								class="
-									fab
-									fa-instagram
-									iconoSocial
-									text-warning
-									mx-5
-								"
-							></i
+							><i class="fab fa-instagram iconoSocial text-warning mx-5"></i
 						></a>
 						<a href="https://www.youtube.com/">
-							<i
-								class="
-									fab
-									fa-youtube
-									iconoSocial
-									text-warning
-									mx-5
-								"
-							></i>
+							<i class="fab fa-youtube iconoSocial text-warning mx-5"></i>
 						</a>
 					</div>
 					<div class="footer__contactanos">
 						<p class="footer__contactanos--text">Contactanos</p>
-						<p class="footer__contactanos--number">
-							011-222-333-111
-						</p>
+						<p class="footer__contactanos--number">011-222-333-111</p>
 					</div>
 				</div>
 			</div>
