--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -8,6 +8,7 @@
 @import './components/404';
 @import './components/productos';
 @import './components/nosotros';
+@import './components/cursos';
 body {
 	background-color: whitesmoke;
 }
