--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -10,48 +10,11 @@ footer {
 		}
 	}
 
-	.menu {
-		background-color: $primaryColor;
-		width: 100%;
-		color: $secundaryColor;
-
-		.footerRedes {
-			text-align: center;
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-
-			.socialNetworks {
-				display: flex;
-				justify-content: space-between;
-				width: 30rem;
-				margin-top: 3rem;
-				padding-top: 4rem;
-
-				.iconoSocial {
-					font-size: 4rem;
-
-					@media only screen and (min-width: 768px) {
-						font-size: 5rem;
-					}
-
-					@media only screen and (min-width: 1200px) {
-						font-size: 6rem;
-					}
-				}
-			}
-
-			.footer__contactanos {
-				padding-top: 4rem;
-				padding-bottom: 9rem;
-
-				.footer__contactanos--text {
-					font-size: 5rem;
-				}
-
-				.footer__contactanos--number {
-					padding-top: 1rem;
-					font-size: 2rem;
+	div {
+		div {
+			div {
+				i {
+					font-size: 1.7rem;
 				}
 			}
 		}
