--- a/assets/scss/components/_index.scss
+++ b/assets/scss/components/_index.scss
@@ -1,5 +1,32 @@
 /**********HEADER***********/
-@import './commons';
+
+.header__img {
+	background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+		url('/assets/img/banner.jpg');
+	height: 85vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-size: cover;
+	background-position: center;
+
+	.header__logo {
+		width: 40vw;
+
+		@media only screen and (min-width: 1200px) {
+			width: 22vw;
+		}
+	}
+
+	.header__title {
+		font-size: 4rem;
+
+		@media only screen and (min-width: 768px) {
+			font-size: 7rem;
+		}
+	}
+}
+
 .header__container {
 	margin-top: 13rem;
 
