--- a/assets/scss/components/_nosotros.scss
+++ b/assets/scss/components/_nosotros.scss
@@ -1,8 +1,11 @@
-.nosotros__font {
-	font-size: 6rem;
-	margin-bottom: 8rem;
+.nosotros__banner {
+	background: url(/assets/img/nosotrosBanner.jpg);
+	height: 60vh;
+	background-position: center;
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
 }
-
 .nosotros__name--directora {
 	width: 100vw;
 	padding-top: 2rem;
