--- a/views/cursos.html
+++ b/views/cursos.html
@@ -44,18 +44,33 @@
 		</nav>
 
 		<section>
-			<div class="mt-5 bg-dark container-fluid">
-				<div class="d-flex py-5">
-					<p class="fs-1 text-white ms-5">Encuentra tu Curso ideal:</p>
-					<select name="select" class="ms-3 fs-2 px-4 bg-dark text-white">
-						<option value="value1">Barberia</option>
-						<option value="value2" selected>Peluqueria Unisex</option>
-						<option value="value3">Maquillaje</option>
-						<option value="value4">Manicuria</option>
-						<option value="value5">Superiores</option>
-						<option value="value6">Fotografia</option>
-					</select>
+			<div class="cursos__banner"></div>
+		</section>
+
+		<section>
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="container-fluid cursos__container justify-content-center">
+						<div class="cursos__font">
+							<h1 class="cursos__font--title py-5">EDUCACIÓN</h1>
+							<p class="cursos__font--parrafo p-4">
+								Nuestro programa de Educación de la Academia Sinergia, dirigido por
+								Andrea Calderon, permite a los aprendices y al personal menos
+								experimentado aprender las habilidades del oficio, mientras
+								adquieren experiencia práctica de primera mano. Los cursos brindan
+								una base completa sobre la cual crecer, desarrollar o incluso
+								actualizar su conjunto de habilidades. Eche un vistazo a nuestros
+								amplios programas de educación a continuación y no dude en ponerse
+								en contacto para discutir cualquiera de los cursos con más detalle.
+							</p>
+						</div>
+					</div>
 				</div>
+			</div>
+		</section>
+
+		<section>
+			<div class="bg-dark container-fluid">
 				<div class="row d-flex justify-content-around">
 					<div class="col-lg-3 mt-5">
 						<div class="container px-5 bg-dark text-white border border-warning">
@@ -278,7 +293,7 @@
 				</div>
 			</div>
 
-			<div class="bg-dark">
+			<div class="bg-dark container-fluid">
 				<div class="row d-flex justify-content-around">
 					<div class="col-lg-3 mt-5">
 						<div class="container px-5 bg-dark text-white border border-warning">
@@ -501,7 +516,7 @@
 				</div>
 			</div>
 
-			<div class="mb-5 py-5 bg-dark">
+			<div class="mb-5 py-5 bg-dark container-fluid">
 				<div class="row d-flex justify-content-around">
 					<div class="col-lg-3 mt-5">
 						<div class="container px-5 bg-dark text-white border border-warning">
@@ -725,30 +740,71 @@
 			</div>
 		</section>
 
-		<footer>
+		<footer class="bg-dark">
 			<div class="footer__secondary py-3">
 				<p class="footer__text"></p>
 			</div>
 
-			<div class="menu">
-				<div class="footerRedes">
-					<div class="socialNetworks d-flex justify-content-center">
+			<div class="container text-white py-5">
+				<div class="row">
+					<div class="col-lg-3">
+						<h3 class="fs-1 pt-5">CONTACTATE</h3>
+						<div class="py-4">
+							<div class="d-flex">
+								<i class="py-2 fs-1 fab fa-whatsapp text-success"></i>
+								<p class="ms-3 py-2 fs-2">+54 911 349 582</p>
+							</div>
+							<div class="d-flex">
+								<i class="fas fa-phone py-2 fs-1"></i>
+								<p class="ms-3 py-2 fs-2">+54 011 329 581</p>
+							</div>
+
+							<div class="d-flex">
+								<i class="far fa-envelope py-2 fs-1"> </i>
+								<p class="ms-3 py-2 fs-2">sinergiasr@gmail.com</p>
+							</div>
+							<div class="d-flex">
+								<i class="fas fa-map-marker-alt fs-1 py-2"> </i>
+								<p class="ms-3 py-2 fs-4">Coronel Campos 46, San Rafael, Mendoza</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<h3 class="pt-5 pb-3 fs-1">Inscripciones Abiertas</h3>
+						<a href="/views/cursos.html"
+							><button class="btn btn-warning w-50 p-3 fs-2">Inscribite</button></a
+						>
+
+						<h3 class="fs-1 pt-5 pb-4">SOCIAL</h3>
 						<a href="https://www.facebook.com/"
-							><i class="fab fa-facebook-square iconoSocial text-warning mx-5"></i
+							><i class="fab fa-facebook-f bg-white rounded-circle text-dark p-3"></i
 						></a>
-						<a href="https://twitter.com/"
-							><i class="fab fa-twitter mx-5 iconoSocial text-warning"></i
+						<a href="https://www.twitter.com/"
+							><i
+								class="fab fa-twitter bg-white rounded-circle text-dark p-3 ms-4"
+							></i
 						></a>
 						<a href="https://www.instagram.com/"
-							><i class="fab fa-instagram iconoSocial text-warning mx-5"></i
+							><i
+								class="fab fa-instagram bg-white rounded-circle text-dark p-3 ms-4"
+							></i
 						></a>
-						<a href="https://www.youtube.com/">
-							<i class="fab fa-youtube iconoSocial text-warning mx-5"></i>
-						</a>
 					</div>
-					<div class="footer__contactanos">
-						<p class="footer__contactanos--text">Contactanos</p>
-						<p class="footer__contactanos--number">011-222-333-111</p>
+					<div class="col-lg-3">
+						<h3 class="pt-5 fs-1 pb-2">ALUMNOS</h3>
+						<a href="/views/contacto.html" class="text-decoration-none"
+							><p class="fs-3 text-white opacity-50">Atencion al Alumno</p></a
+						>
+
+						<h3 class="pt-5 fs-1 pb-2">Profesionales</h3>
+						<a href="/views/contacto.html" class="text-decoration-none"
+							><p class="fs-3 text-white opacity-50">Trabaja con Nosotros</p></a
+						>
+					</div>
+					<div class="col-lg-3">
+						<h3 class="pt-5 fs-1 pb-4">TE MANTENDREMOS INFORMADO</h3>
+						<input type="text" placeholder="ingresa tu email" class="p-4 w-100 fs-3" />
+						<button class="my-4 w-50 p-4 bg-white fs-3">Suscribite</button>
 					</div>
 				</div>
 			</div>
