--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -42,10 +42,34 @@
 			</div>
 		</nav>
 
+		<section>
+			<div class="nosotros__banner"></div>
+		</section>
+
+		<section>
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="container-fluid cursos__container justify-content-center">
+						<div class="cursos__font">
+							<h1 class="cursos__font--title py-5">Sinergia</h1>
+							<p class="cursos__font--parrafo p-4">
+								Nuestro programa de Educación de la Academia Sinergia, dirigido por
+								Andrea Calderon, permite a los aprendices y al personal menos
+								experimentado aprender las habilidades del oficio, mientras
+								adquieren experiencia práctica de primera mano. Los cursos brindan
+								una base completa sobre la cual crecer, desarrollar o incluso
+								actualizar su conjunto de habilidades. Eche un vistazo a nuestros
+								amplios programas de educación a continuación y no dude en ponerse
+								en contacto para discutir cualquiera de los cursos con más detalle.
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
 		<main>
 			<div class="container-fluid bgPrimary section__padding my-5">
-				<h1 class="text-white text-center nosotros__font">¿Quienes Somos?</h1>
-
 				<div class="row justify-content-center">
 					<div class="col-lg-10">
 						<div class="row">
@@ -141,32 +165,90 @@
 					/></a>
 				</div>
 			</div>
+
+			<div class="row d-flex justify-content-center pt-3 pb-5">
+				<div class="col-lg-4 p-3">
+					<p class="fs-3">
+						La mayoría de ellos se formaron desde sus inicios en Sinergia donde, a
+						través de los años de experiencia en la atención al publico y la
+						capacitación constante, adquirieron las herramientas fundamentales para
+						estar al frente de los cursos, formar profesionales y transmitirles nuestra
+						técnica de trabajo.
+					</p>
+					<p class="fs-3">
+						En el caso de Elizabeth di Gaeta, Directora de Formación, cuenta con una
+						amplia trayectoria profesional y académica. También proveniente de familia
+						de peluqueros, terminó de formarse en varias academias alrededor del mundo.
+					</p>
+				</div>
+			</div>
 		</section>
 
-		<footer>
+		<footer class="bg-dark">
 			<div class="footer__secondary py-3">
 				<p class="footer__text"></p>
 			</div>
 
-			<div class="menu">
-				<div class="footerRedes">
-					<div class="socialNetworks d-flex justify-content-center">
+			<div class="container text-white py-5">
+				<div class="row">
+					<div class="col-lg-3">
+						<h3 class="fs-1 pt-5">CONTACTATE</h3>
+						<div class="py-4">
+							<div class="d-flex">
+								<i class="py-2 fs-1 fab fa-whatsapp text-success"></i>
+								<p class="ms-3 py-2 fs-2">+54 911 349 582</p>
+							</div>
+							<div class="d-flex">
+								<i class="fas fa-phone py-2 fs-1"></i>
+								<p class="ms-3 py-2 fs-2">+54 011 329 581</p>
+							</div>
+
+							<div class="d-flex">
+								<i class="far fa-envelope py-2 fs-1"> </i>
+								<p class="ms-3 py-2 fs-2">sinergiasr@gmail.com</p>
+							</div>
+							<div class="d-flex">
+								<i class="fas fa-map-marker-alt fs-1 py-2"> </i>
+								<p class="ms-3 py-2 fs-4">Coronel Campos 46, San Rafael, Mendoza</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<h3 class="pt-5 pb-3 fs-1">Inscripciones Abiertas</h3>
+						<a href="/views/cursos.html"
+							><button class="btn btn-warning w-50 p-3 fs-2">Inscribite</button></a
+						>
+
+						<h3 class="fs-1 pt-5 pb-4">SOCIAL</h3>
 						<a href="https://www.facebook.com/"
-							><i class="fab fa-facebook-square iconoSocial text-warning mx-5"></i
+							><i class="fab fa-facebook-f bg-white rounded-circle text-dark p-3"></i
 						></a>
-						<a href="https://twitter.com/"
-							><i class="fab fa-twitter mx-5 iconoSocial text-warning"></i
+						<a href="https://www.twitter.com/"
+							><i
+								class="fab fa-twitter bg-white rounded-circle text-dark p-3 ms-4"
+							></i
 						></a>
 						<a href="https://www.instagram.com/"
-							><i class="fab fa-instagram iconoSocial text-warning mx-5"></i
+							><i
+								class="fab fa-instagram bg-white rounded-circle text-dark p-3 ms-4"
+							></i
 						></a>
-						<a href="https://www.youtube.com/">
-							<i class="fab fa-youtube iconoSocial text-warning mx-5"></i>
-						</a>
 					</div>
-					<div class="footer__contactanos">
-						<p class="footer__contactanos--text">Contactanos</p>
-						<p class="footer__contactanos--number">011-222-333-111</p>
+					<div class="col-lg-3">
+						<h3 class="pt-5 fs-1 pb-2">ALUMNOS</h3>
+						<a href="/views/contacto.html" class="text-decoration-none"
+							><p class="fs-3 text-white opacity-50">Atencion al Alumno</p></a
+						>
+
+						<h3 class="pt-5 fs-1 pb-2">Profesionales</h3>
+						<a href="/views/contacto.html" class="text-decoration-none"
+							><p class="fs-3 text-white opacity-50">Trabaja con Nosotros</p></a
+						>
+					</div>
+					<div class="col-lg-3">
+						<h3 class="pt-5 fs-1 pb-4">TE MANTENDREMOS INFORMADO</h3>
+						<input type="text" placeholder="ingresa tu email" class="p-4 w-100 fs-3" />
+						<button class="my-4 w-50 p-4 bg-white fs-3">Suscribite</button>
 					</div>
 				</div>
 			</div>
